# rufus-linux

./: .gitignore  LINUX_WORKLOAD.md  Makefile.in  configure  configure.ac  configure~
res/gtk_ui/: window.xml
res/hogger/: hogger.c
res/loc/: Makefile.in
res/setup/: setup.c
src/: GResources.xml  Makefile.am  Makefile.in  badblocks.c  badblocks.h  dev.c  dev.h  dos.c  dos_locale.c  drive.h  format.c  format.h  format_ext.c  format_fat32.c  generate_unix_assets.py  gpt_types.h  hash.c  icon.c  iso.c  localization.c  localization.h  localization_data.h  missing.h  msapi_utf8.h  net.c  parser.c  pki.c  process.c  process.h  registry.h  resource.h.gch  rufus.c  rufus.h  rufus.rc  settings.h  smart.c  stdfn.c  stdio.c  stdlg.c  syslinux.c  (+10 more)
src/bled/: Makefile.am  Makefile.in  bled.c  bled.h  data_extract_all.c  decompress_vtsi.c  find_list_entry.c  header_verbose_list.c  libbb.h  zstd_deps.h
src/common/: Makefile.am  Makefile.in  README.md  hash.c  missing.h  pseudo_windows.h  rufus.h  stdfn.c  stdio.c  winio.h
src/ext2fs/: Makefile.am  Makefile.in  ext2_types.h  jfs_compat.h  nt_io.c  unix_io.c
src/libcdio/: config.h
src/linux_compat/: Makefile.am  Makefile.in  locale.c  locale.h  minwindef.h  pseudo_windows.c  pseudo_windows.h
src/linux_specific/: Makefile.am  Makefile.in  README.md  locale.c  locale.h  mini_winnt.h  minwindef.h  pseudo_windows.c  rufus.c  win_fs_functions.h  wine_string.c  wine_string.h  winerror.h  winio.c
src/ms-sys/: Makefile.am  Makefile.in  file_common.c  file_unix.c  file_win.c
src/windows_specific/: Makefile.am  Makefile.in  (+8 more)
(+11 files in other folders)
